editing menu and add reacr router dom

--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -16,3 +16,10 @@
   font-weight: 400;
   line-height: 20px;
 }
+.menu-text {
+  color: var(--btn-text-color);
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: center;
+}
