--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,6 +9,7 @@ p {
   margin: 0;
 }
 html {
+  --menu-border-color: #b2b2b233;
   --menu-color: #f2f2f2;
   --line-color: #c6c6c866;
   --main-color: white;
