--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,8 +1,28 @@
 .menu {
   display: flex;
   width: 100%;
-  height: 50px;
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+
   position: absolute;
   left: 0;
+  width: 100%;
   bottom: 0;
+}
+.ad {
+  background-color: var(--main-color);
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 18px;
+  padding-bottom: 82px;
+  &__link {
+    color: var(--btn-text-color);
+  }
+  &__text {
+    text-align: center;
+  }
 }
