--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -12,6 +12,9 @@
   border-radius: 30px;
 }
 .attention-btn {
+  padding: 14px;
+  padding-inline: 20px;
+  border: none;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
@@ -25,4 +28,15 @@
   color: var(--btn-text-color);
   background-color: var(--main-color);
   border-radius: 10px;
+}
+.edit-streamer-btn {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 5px;
+  text-align: center;
+  color: var(--btn-text-color);
+  background-color: var(--main-color);
 }
