--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,9 +18,11 @@ html {
   --btn-text-color: #007aff;
   --secondary-color: #eeeeef;
   --txt-2ry-color: #8a8a8e;
+  --page-color: #efeff3;
   --live-color: #eb0400;
 }
 .section {
+  overflow-x: hidden;
   display: flex;
   width: 100%;
   flex-direction: column;
