--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,8 @@ html {
   --secondary-color: #eeeeef;
   --txt-2ry-color: #8a8a8e;
   --page-color: #efeff3;
+  --green-color: #35c759;
+
   --live-color: #eb0400;
 }
 .section {
