--- a/src/components/Streamers/Streamers.scss
+++ b/src/components/Streamers/Streamers.scss
@@ -1,10 +1,11 @@
 .streamers {
-  .details-text {
+  &-text {
     margin-top: 8px;
     margin-bottom: 3px;
     margin-left: 9px;
   }
   .header-text {
+    margin-bottom: 5px;
     margin-top: 15px;
     margin-left: 9px;
   }
