--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -22,6 +22,18 @@
   background-color: var(--btn-text-color);
   color: var(--main-color);
 }
+.attention-opacity-btn {
+  padding: 14px;
+  padding-inline: 20px;
+  border: none;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  border-radius: 6px;
+  color: var(--btn-text-color);
+  background-color: var(--btn-opacity);
+}
+
 .social-btn {
   display: flex;
   flex-direction: column;
