--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -5,6 +5,9 @@
   color: var(--text-color);
 }
 .details-text {
+  &_add {
+    margin-inline: 9px;
+  }
   color: var(--txt-2ry-color);
   font-size: 12px;
   font-weight: 400;
@@ -13,6 +16,10 @@
 .label-text {
   color: black;
   font-size: 16px;
+  &-error {
+    font-size: 12px;
+    text-align: center;
+  }
   font-weight: 400;
   line-height: 20px;
 }
