--- a/src/components/Information/Information.scss
+++ b/src/components/Information/Information.scss
@@ -4,4 +4,11 @@
   align-items: center;
   justify-content: center;
   padding: 15px;
+  &__error {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    background-color: var(--main-color);
+    border-radius: 4px;
+  }
 }
