--- a/src/components/CreateRaffle/CreateRaffle.scss
+++ b/src/components/CreateRaffle/CreateRaffle.scss
@@ -1,8 +1,87 @@
 .create-raffle {
+  padding-bottom: 30px;
+  padding-top: 30px;
+  &__winner-generator-slider {
+    margin-top: 30px;
+    background-color: var(--main-color);
+    border-radius: 14px;
+    padding: 6px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    span {
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+  &__end {
+    align-items: center;
+    span {
+      font-size: 16px;
+      font-weight: 400;
+      margin-left: 10px;
+    }
+    margin-top: 10px;
+    display: flex;
+    background-color: var(--main-color);
+    border-radius: 14px;
+    justify-content: space-between;
+    padding: 4px 10px;
+  }
+  &__time {
+    display: flex;
+    column-gap: 4px;
+    justify-content: space-between;
+    input {
+      &:first-child {
+        max-width: 90px;
+      }
+      width: auto;
+      height: 30px;
+      align-items: center;
+      max-width: 120px;
+      display: flex;
+      justify-content: center;
+      padding: 2px 14px;
+      border-radius: 8px;
+      background-color: #efefef;
+      border: none;
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+  background-color: #efeff3;
+  &__winner-generator-slider {
+    padding: 6px;
+    padding-inline: 20px;
+    margin-top: 30px;
+    background-color: var(--main-color);
+    border-radius: 14px;
+    display: flex;
+    justify-content: space-between;
+  }
   display: flex;
   flex-direction: column;
   &__buttons {
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
+    row-gap: 14px;
+  }
+  &__details {
+    margin-top: 8px;
+  }
+  &__header {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 20px;
+    text-align: center;
+    &-label {
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 16px;
+      color: #6d6d71;
+    }
   }
 }
