--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -14,6 +14,29 @@ button {
   padding-inline: 15px;
   border-radius: 30px;
 }
+.preview-btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: var(--main-color);
+  color: var(--btn-text-color);
+  padding: 10px 0;
+  border-radius: 6px;
+  font-size: 14px;
+  font-weight: 400;
+}
+.start-btn {
+  width: 100%;
+  padding: 10px 0;
+  color: var(--main-color);
+  background-color: var(--btn-text-color);
+  display: flex;
+  justify-content: center;
+  border-radius: 6px;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
 .attention-btn {
   padding: 14px;
   padding-inline: 20px;
