--- a/src/components/StreamerHeader/StreamerHeader.scss
+++ b/src/components/StreamerHeader/StreamerHeader.scss
@@ -1,7 +1,7 @@
 .streamer {
   &__socials {
     margin-top: 21px;
-    justify-content: space-between;
+    justify-content: center;
     display: flex;
     column-gap: 14px;
   }
