--- a/src/components/ModalWindow/ModalWindow.scss
+++ b/src/components/ModalWindow/ModalWindow.scss
@@ -3,7 +3,8 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  z-index: 1000;
+  height: calc(100vh + 109px);
   display: flex;
   align-items: center;
   justify-content: center;
