--- a/src/components/UserView/UserView.scss
+++ b/src/components/UserView/UserView.scss
@@ -1,5 +1,6 @@
 .streamer-view {
   overflow-x: hidden;
+
   margin-top: 8px;
   .details-text {
     margin-top: 7px;
@@ -17,19 +18,20 @@
   display: flex;
   width: 100%;
   &__avatar {
-    &-user {
-      width: 40px;
-      height: 40px;
-    }
     object-fit: cover;
     margin-right: 9px;
     width: 60px;
     height: 60px;
     border-radius: 100%;
+    &-user {
+      width: 40px;
+      height: 40px;
+    }
   }
   &__info {
     overflow-x: hidden;
     width: 100%;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     &-header {
