--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -3,25 +3,30 @@
   display: flex;
   justify-content: center;
   position: relative;
-  .center {
+  span:nth-child(2) {
     font-size: 20px;
     font-weight: 500;
   }
-  .left,
-  .right {
+  span:nth-child(1) {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: auto;
 
     font-size: 16px;
+    left: 0px;
     font-weight: 400;
     color: var(--btn-text-color);
   }
-  .right {
+  span:nth-child(3) {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: auto;
+
+    font-size: 16px;
     right: 0px;
-  }
-  .left {
-    left: 0px;
+    font-weight: 400;
+    color: var(--btn-text-color);
   }
 }
