--- a/src/components/UserView/UserView.scss
+++ b/src/components/UserView/UserView.scss
@@ -32,6 +32,7 @@
     overflow-x: hidden;
     width: 100%;
     overflow-y: auto;
+    margin-left: 9px;
     display: flex;
     flex-direction: column;
     &-header {
