--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,10 @@ p {
 body {
   height: 100vh;
 }
-
+button,
+input {
+  outline: none;
+}
 html {
   --menu-border-color: #b2b2b233;
   --menu-color: #f2f2f2;
