добавление интерактивности(страница реадктирования стрмера

--- a/src/components/DataPickerModal/DataPickerModal.scss
+++ b/src/components/DataPickerModal/DataPickerModal.scss
@@ -9,6 +9,7 @@
     color: #8e8e92;
     padding: 5px;
     font-size: 15px;
+    height: auto;
     font-weight: 400;
     padding-inline: 10px;
   }
