--- a/src/components/DataPickerModal/DataPickerModal.scss
+++ b/src/components/DataPickerModal/DataPickerModal.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   row-gap: 15px;
   padding: 10px;
+  textarea {
+    border: 1px solid #8e8e92;
+  }
   input {
     border-radius: 14px;
     border: 1px solid #8e8e92;
