--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -62,6 +62,7 @@ textarea {
   width: 100%;
   margin-top: 10px;
   font-size: 14px;
+  resize: none;
   padding: 6px 20px;
   font-weight: 400;
   border-radius: 14px;
