--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,6 +44,7 @@ html {
   width: 100%;
   flex-direction: column;
   padding: 10px;
+  padding-inline: 15px;
 }
 .live-cicrcle {
   background-color: var(--live-color);
