добавление хука лоадера и хука проверки валидности изображений

--- a/src/components/UserView/UserView.scss
+++ b/src/components/UserView/UserView.scss
@@ -46,6 +46,14 @@
     }
   }
   &__name {
+    align-items: center;
+    .circle {
+      background-color: #eb0400;
+      height: 8px;
+      width: 8px;
+      border-radius: 100%;
+    }
+    column-gap: 4px;
     display: flex;
   }
 }
