--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,6 +45,7 @@ html {
   flex-direction: column;
   padding: 10px;
   padding-inline: 15px;
+  padding-top: 30px;
 }
 .live-cicrcle {
   background-color: var(--live-color);
