--- a/src/components/Prize/Prize.scss
+++ b/src/components/Prize/Prize.scss
@@ -97,7 +97,7 @@
     font-weight: 700;
     line-height: 22px;
     text-align: center;
-
+    padding-top: 1px;
     position: absolute;
     width: 46px;
     bottom: 0px;
