--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,12 +13,14 @@ p {
 body {
   height: 100vh;
   outline: none;
+  overscroll-behavior: none;
 }
 button,
 input {
   outline: none;
 }
 html {
+  overscroll-behavior: none;
   --menu-border-color: #b2b2b233;
   --menu-color: #f2f2f2;
   --line-color: #c6c6c866;
@@ -37,6 +39,7 @@ html {
   --live-color: #eb0400;
 }
 .section {
+  overscroll-behavior: none;
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
