--- a/src/components/Streamers/Streamers.scss
+++ b/src/components/Streamers/Streamers.scss
@@ -3,7 +3,8 @@
   overflow-y: hidden;
   &-wrapper {
     overflow-y: auto;
-    height: 100%;
+    max-height: 100%;
+    height: auto;
   }
   &-text {
     margin-top: 8px;
