--- a/src/components/Streamers/Streamers.scss
+++ b/src/components/Streamers/Streamers.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   &-wrapper {
     overflow-y: auto;
-    max-height: 100%;
+    height: 100%;
     height: auto;
   }
   &-text {
