--- a/src/components/Streamers/Streamers.scss
+++ b/src/components/Streamers/Streamers.scss
@@ -2,6 +2,7 @@
   height: 100%;
   overflow: hidden;
   &-wrapper {
+    overscroll-behavior-block: none;
     overflow-y: auto;
     min-height: 100%;
     max-height: 100%;
