--- a/src/components/Streamers/Streamers.scss
+++ b/src/components/Streamers/Streamers.scss
@@ -6,6 +6,7 @@
     overflow-y: auto;
     min-height: 100%;
     max-height: 100%;
+    padding-bottom: 20px;
   }
   &-text {
     margin-top: 8px;
