--- a/src/components/UserView/UserView.scss
+++ b/src/components/UserView/UserView.scss
@@ -1,6 +1,6 @@
 .streamer-view {
   overflow-x: hidden;
-
+  transform: translate3d(0, 0, 0);
   margin-top: 8px;
   .details-text {
     margin-top: 7px;
