--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,9 +22,9 @@ input {
   outline: none;
 }
 html {
-  --accent_text_color: "#007aff";
-  --button_color: "#007aff";
-  --link_color: "#007aff";
+  --tg-theme-accent-text-color: #007aff;
+  --tg-theme-button-color: #007aff;
+  --tg-theme-link-color: #007aff;
   --overscroll-behavior: none;
   --menu-border-color: #b2b2b233;
   --menu-color: #f2f2f2;
