--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -13,7 +13,7 @@
     position: relative;
   }
   &__label {
-    color: var(--btn-text-color);
+    color: var(--menu-text);
     font-size: 11px;
     font-weight: 500;
     line-height: 20px;
