--- a/src/components/StreamerSubscribers/StreamerSubscribers.scss
+++ b/src/components/StreamerSubscribers/StreamerSubscribers.scss
@@ -15,6 +15,7 @@
     &-body {
       border-radius: 14px;
       padding: 14px 15px;
+      padding-right: 0px;
       background-color: var(--main-color);
       margin-top: 11px;
     }
