--- a/src/components/UserView/UserView.scss
+++ b/src/components/UserView/UserView.scss
@@ -38,8 +38,10 @@
     &-header {
       align-items: center;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       &-description {
+        padding-left: 15px;
         display: flex;
         flex-direction: column;
       }
