--- a/src/components/UserView/UserView.scss
+++ b/src/components/UserView/UserView.scss
@@ -41,7 +41,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       &-description {
-        padding-left: 15px;
+        padding-right: 15px;
         display: flex;
         flex-direction: column;
       }
