--- a/src/components/CreateRaffleEndPicker/CreateRaffleEndPicker.scss
+++ b/src/components/CreateRaffleEndPicker/CreateRaffleEndPicker.scss
@@ -1,9 +1,21 @@
 .create-raffle__time {
-  .fake-input {
+  input {
     background-color: #efefef;
     padding: 7px 12px;
     font-size: 16px;
     font-weight: 400;
     border-radius: 8px;
+    color: var(--text-color);
+  }
+  input[type="time"]::-webkit-calendar-picker-indicator {
+    background: none;
+    display: none;
+    opacity: 0;
+  }
+  input[type="date"]::-webkit-inner-spin-button,
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    opacity: 0;
+    -webkit-appearance: none;
   }
 }
