--- a/src/components/CreateRaffle/CreateRaffle.scss
+++ b/src/components/CreateRaffle/CreateRaffle.scss
@@ -8,6 +8,7 @@
     padding: 6px 20px;
     display: flex;
     justify-content: space-between;
+    column-gap: 10px;
     align-items: center;
     span {
       font-size: 16px;
