--- a/src/components/CreateRaffleEndPicker/CreateRaffleEndPicker.scss
+++ b/src/components/CreateRaffleEndPicker/CreateRaffleEndPicker.scss
@@ -13,6 +13,7 @@
   .input-wrapper {
     position: relative;
     input {
+      min-width: 45px;
       position: absolute;
       left: 0;
       top: 0;
