--- a/src/components/ModalWindow/ModalWindow.scss
+++ b/src/components/ModalWindow/ModalWindow.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   z-index: 1000;
-  height: calc(100vh + 109px);
+  height: calc(100%);
   display: flex;
   align-items: center;
   justify-content: center;
