--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -22,7 +22,7 @@ button {
   background-color: var(--main-color);
   color: var(--btn-text-color);
   padding: 10px 0;
-  border-radius: 6px;
+  border-radius: var(--border-radius);
   font-size: 14px;
   font-weight: 400;
 }
@@ -33,7 +33,7 @@ button {
   background-color: var(--btn-text-color);
   display: flex;
   justify-content: center;
-  border-radius: 6px;
+  border-radius: var(--border-radius);
   font-size: 14px;
   font-weight: 400;
   text-transform: uppercase;
@@ -45,7 +45,7 @@ button {
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
-  border-radius: 13px;
+  border-radius: var(--border-radius);
 
   background-color: var(--btn-text-color);
   color: var(--main-color);
@@ -59,7 +59,7 @@ button {
   display: flex;
   justify-content: center;
   line-height: 20px;
-  border-radius: 6px;
+  border-radius: var(--border-radius);
   color: var(--btn-text-color);
   background-color: var(--btn-opacity);
 }
