--- a/src/components/TelegramPostPreview/TelegramPostPreview.scss
+++ b/src/components/TelegramPostPreview/TelegramPostPreview.scss
@@ -3,12 +3,12 @@
   padding: 18px 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  border-radius: var(--border-radius);
   row-gap: 15px;
   background-color: var(--main-color);
   &__cover {
     width: 100%;
-    height: 350px;
+    max-height: 350px;
     object-fit: contain;
     margin-inline: auto;
     border-radius: var(--border-radius);
