--- a/src/components/Streamers/Streamers.scss
+++ b/src/components/Streamers/Streamers.scss
@@ -6,7 +6,7 @@
     overscroll-behavior-block: none;
     overflow-y: auto;
     min-height: 100%;
-    max-height: 100%;
+    max-height: 100vh;
     padding-bottom: 40px;
   }
   &-text {
