--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,8 +13,10 @@ p {
 }
 #root,
 body {
+  touch-action: none;
   outline: none;
   width: 100%;
+  touch-action: none;
 }
 #root {
   overflow: hidden;
