--- a/src/components/SubscriberProfileInfo/SubscriberProfileInfo.scss
+++ b/src/components/SubscriberProfileInfo/SubscriberProfileInfo.scss
@@ -3,7 +3,7 @@
     background-color: var(--main-color);
     list-style-type: none;
     padding: 0;
-    padding: 8px;
+
     padding-inline: 20px 0px;
     margin: 0;
     margin-top: 10px;
@@ -23,20 +23,21 @@
           background-color: #8a8a8e;
           border: none;
           justify-content: center;
-          padding: 8px;
-          padding-inline: 15px;
+          padding: 6px;
+          align-items: center;
+          padding-inline: 17px;
           column-gap: 2px;
           color: var(--main-color);
           font-size: 14px;
           font-weight: 700;
         }
         display: flex;
-        padding-right: 15px;
+        padding: 14px 15px;
+        padding-left: 0;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
         .main {
           display: flex;
-          row-gap: 5px;
           .selected {
             color: var(--btn-text-color);
           }
