--- a/src/components/SubscriberProfileInfo/SubscriberProfileInfo.scss
+++ b/src/components/SubscriberProfileInfo/SubscriberProfileInfo.scss
@@ -26,7 +26,7 @@
           padding: 6px;
           align-items: center;
           padding-inline: 17px;
-          column-gap: 2px;
+          column-gap: 4px;
           color: var(--main-color);
           font-size: 14px;
           font-weight: 700;
@@ -34,6 +34,7 @@
         display: flex;
         padding: 14px 15px;
         padding-left: 0;
+        padding-bottom: 13px;
         justify-content: space-between;
         align-items: flex-start;
         .main {
