добавление превью на страницу создания поста

--- a/src/components/StreamerSubscribers/StreamerSubscribers.scss
+++ b/src/components/StreamerSubscribers/StreamerSubscribers.scss
@@ -3,6 +3,7 @@
     &-users {
       max-height: 349px;
       overflow-y: auto;
+      position: fixed;
     }
     margin-top: 20px;
     &-header {
