--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,13 @@ body {
 #root {
   position: relative;
 }
+.cover {
+  max-width: 100%;
+  max-height: 350px;
+  object-fit: contain;
+  margin-inline: auto;
+  border-radius: var(--border-radius);
+}
 button,
 input {
   outline: none;
