--- a/src/components/StreamerSubscribers/StreamerSubscribers.scss
+++ b/src/components/StreamerSubscribers/StreamerSubscribers.scss
@@ -3,6 +3,8 @@
     &-users {
       max-height: 349px;
       overflow-y: auto;
+      -webkit-transform: translate3d(0, 0, 0);
+      position: relative;
     }
     margin-top: 20px;
     &-header {
