--- a/src/components/SocialItem/SocialItem.scss
+++ b/src/components/SocialItem/SocialItem.scss
@@ -1,6 +1,7 @@
 .social-item {
   padding: 11px;
   width: 25%;
+  padding-bottom: 6px;
   display: flex;
   border-radius: 10px;
   flex-direction: column;
@@ -16,7 +17,7 @@
     font-size: 8px;
     font-weight: 700;
     margin-top: 5px;
-    line-height: 20px;
+    line-height: 1.8;
     color: var(--btn-text-color);
     text-align: center;
   }
