--- a/src/components/StreamerPreview/StreamerPreview.scss
+++ b/src/components/StreamerPreview/StreamerPreview.scss
@@ -13,8 +13,10 @@
       margin-top: 12px;
     }
     .header-text {
+      font-weight: 500;
+      font-size: 24px;
       text-align: center;
-      margin-top: 15px;
+      margin-top: 11px;
     }
   }
 }
