--- a/src/components/CreateRaffle/CreateRaffle.scss
+++ b/src/components/CreateRaffle/CreateRaffle.scss
@@ -73,6 +73,7 @@
     margin-top: 8px;
   }
   &__header {
+    margin-left: 20px;
     font-size: 20px;
     font-weight: 500;
     line-height: 20px;
