--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -7,6 +7,7 @@
 .details-text {
   &_add {
     margin-inline: 9px;
+    margin-left: 20px;
   }
   color: var(--txt-2ry-color);
   font-size: 12px;
