--- a/src/components/StreamerPreview/StreamerPreview.scss
+++ b/src/components/StreamerPreview/StreamerPreview.scss
@@ -10,6 +10,8 @@
       margin-top: 15px;
     }
     .details-text {
+      font-weight: 400;
+      font-size: 16px;
       margin-top: 12px;
     }
     .header-text {
