--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -4,12 +4,13 @@
     &-label {
       font-size: 12px;
       font-weight: 400;
+      margin-left: 20px;
       color: #6d6d71;
       text-transform: uppercase;
     }
   }
   &__form {
-    margin-top: 10px;
+    margin-top: 7px;
     display: flex;
     flex-direction: column;
     background-color: var(--main-color);
@@ -34,7 +35,9 @@
         }
         display: flex;
         justify-content: space-between;
+        padding: 9px;
         padding-inline: 20px 15px;
+
         column-gap: 15px;
         align-items: center;
       }
