--- a/src/components/StreamerVideos/StreamerVideo.scss
+++ b/src/components/StreamerVideos/StreamerVideo.scss
@@ -5,6 +5,7 @@
     .header-text {
       font-size: 18px;
       font-weight: 600;
+      margin-top: 30px;
       line-height: 20px;
       margin-inline: 4px;
     }
