--- a/src/components/Prize/Prize.scss
+++ b/src/components/Prize/Prize.scss
@@ -14,6 +14,9 @@
     }
   }
   margin-top: 10px;
+  .avatar__is-live.prize__available-time {
+    padding: 0px;
+  }
   &__available-time {
     min-height: 18px;
     bottom: unset;
