--- a/src/components/Prize/Prize.scss
+++ b/src/components/Prize/Prize.scss
@@ -15,7 +15,7 @@
   }
   margin-top: 10px;
   .avatar__is-live.prize__available-time {
-    padding: 0px;
+    padding: 0px 6px;
   }
   &__available-time {
     min-height: 18px;
