--- a/src/components/CreateRaffle/CreateRaffle.scss
+++ b/src/components/CreateRaffle/CreateRaffle.scss
@@ -81,6 +81,7 @@
     &-label {
       text-transform: uppercase;
       font-size: 12px;
+      margin-left: 20px;
       font-weight: 400;
       line-height: 16px;
       color: #6d6d71;
