--- a/src/components/CreateRaffleWinnerCount/CreateRaffleWinnerCount.scss
+++ b/src/components/CreateRaffleWinnerCount/CreateRaffleWinnerCount.scss
@@ -8,6 +8,7 @@
     }
     margin-top: 25px;
     &__header {
+      padding-left: 20px;
       display: flex;
       justify-content: space-between;
     }
